platform/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cia-pixel-lab
  labels:
    platform.servidor.local/managed: "true"
    platform.servidor.local/project: cia-pixel
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
---
apiVersion: v1
kind: Namespace
metadata:
  name: saferwpp-lab
  labels:
    platform.servidor.local/managed: "true"
    platform.servidor.local/project: saferwpp
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
---
apiVersion: v1
kind: Namespace
metadata:
  name: blindou-edge
  labels:
    platform.servidor.local/managed: "true"
    platform.servidor.local/project: blindou
    platform.servidor.local/environment: production
    platform.servidor.local/role: edge
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
---
apiVersion: v1
kind: Namespace
metadata:
  name: blindou-production
  labels:
    platform.servidor.local/managed: "true"
    platform.servidor.local/project: blindou
    platform.servidor.local/environment: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
